# operator

./: .env.example  .gitignore  AGENTS.md  README.md  REV_A_BOARD_AS_BUILT.md  justfile  pyproject.toml  rev_a_board_graphviz.dot  rev_a_board_mermaid.mmd  rev_a_board_netlist.yaml  we302_hardware_profile.template.yaml  western-electric-302-ai-telephone-implementation-plan.md  western-electric-302-ai-telephone-spec.md
config/: hardware_profile.yaml
data/fx/: ATTRIBUTION.md
deploy/: operator-os.service
deploy/modprobe.d/: operator-aloop.conf
deploy/modules-load.d/: operator-aloop.conf
docs/: ai-operator.md  audio-line.md  crossbar-outside-line-effect.md  hardware-profile-verified.md  pi-dev-environment.md  sip-outside-line.md  sms.md  state-chart.md  systemd.md  voicemail.md
operator_os/: __init__.py  ai_operator.py  audio.py  config.py  db.py  diagnostics.py  dial.py  events.py  google_calendar.py  handset_bridge.py  info_desk.py  local_tools.py  mailbox.py  main.py  meet_pick.py  openai_client.py  phone.py  plant.py  realtime_autotune.py  realtime_operator.py  realtime_tune.py  refresh.py  services.py  sip.py  sms.py  state.py
tests/: test_ai_operator.py  test_audio_voice.py  test_config.py  test_db_messages.py  test_db_voicemails.py  test_dial.py  test_events.py  test_google_calendar.py  test_handset_bridge.py  test_hook_flash.py  test_inbox.py  test_plant.py  test_refresh.py  test_services.py  test_sip.py  test_sms.py  test_state.py
tools/: pjsua
voices/: README.md
